seems to be about right

--- a/source/test.html.haml
+++ b/source/test.html.haml
@@ -11,7 +11,7 @@ Hello there!
 
 = link_to 'hello', '/develop/release-management/features/storage/importstoragedomain/#Work_flow_for_Import_File_Storage_Domain_-_UI_flow'
 
-- %w(/ Architecture Features/UIPlugins Features/UIPlugins#test OvfOnWantedDomains#summary recording_video adding_a_soundtrack AAA_JDBC Features/AAA_JDBC Features/AAA_JDBC#Password_management Summer_of_Code Summer_of_Code#oVirt_Ideas_for_Google_Summer_of_Code_2014 Workshop_Mar_2012_-_coordinator_notes#Generic_text_sent_when_mass-subscribing_to_workshop_list).each do |key|
+- %w(/ Architecture Feature Features/UIPlugins Features/UIPlugins#test OvfOnWantedDomains#summary recording_video adding_a_soundtrack AAA_JDBC Features/AAA_JDBC Features/AAA_JDBC#Password_management Summer_of_Code Summer_of_Code#oVirt_Ideas_for_Google_Summer_of_Code_2014 Workshop_Mar_2012_-_coordinator_notes#Generic_text_sent_when_mass-subscribing_to_workshop_list).each do |key|
   %h2= key
   %pre
     = find_wiki_page(key)
