more little changes

--- a/source/test.html.haml
+++ b/source/test.html.haml
@@ -16,6 +16,11 @@ Hello there!
   %pre
     = find_wiki_page(key)
     = link_to(key, key)
+
+%h2= " adding_a_soundtrack"
+%pre
+  = link_to(' adding_a_soundtrack')
+
 %hr
 
 :ruby
