--- a/source/layouts/feature.html.haml
+++ b/source/layouts/feature.html.haml
@@ -233,7 +233,8 @@
             .each_with_object(Hash.new(0)) { |str, count| count[str] += 1 }
             .sort_by { |_, count| count }.reverse # Sort by incidences
             .reject { |_, count| count < 2 } # Require at least 2 modules
-            .map {|str, count| str} # Bake down to a simple array
+            .map { |str, count| str } # Bake down to a simple array
+            .compact
 
         - if related.count > 0
           .related-features
